# sqlite3diff

./: Cargo.toml
src/: lib.rs
