[package]
name = "sqlite3diff"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
blake2 = "0.10.6"
bus = "2.4.1"
clap = { version = "4.4.12", features = ["derive"] }
indexmap = "2.1.0"
libc = "0.2.151"
mio = { version = "0.8.10", features = ["net", "os-poll"] }
nohash = "0.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rusqlite = "0.30.0"
signal-hook = "0.3.17"
zstr = "0.1.1"
